sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:11: error: not found: value ecar
      ecar = 11
      ^